assets/infrastructure/manifests/vault/vault-HTTPRoute.yaml
# HTTPRoute terminates TLS on Envoy and forwards to Vault
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: ${VAULT_NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "vault.${BASE_EXTERNAL_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: vault
      # HTTP (not HTTPS) port because we terminate on Envoy Gateway
      port: 8200
